[metadata]
name = Resiliens
version = 0.0.3
author = Jon Cavallie Mester
author_email = jwcavalliemester@protonmail.com
description = A Python package for resilient programming.
long_description = file: README.md
license_files = file: LICENSE
long_description_content_type = text/markdown
url = https://github.com/jonmest/resiliens
project_urls =
    Bug Tracker = https://github.com/jonmest/resiliens/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
